Exercicio htmal e css

--- a/segundo_exemplo/contato.html
+++ b/segundo_exemplo/contato.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina inicial</title>
+    <link rel="stylesheet" href="/segundo_exemplo/Style/contato.css"></a>
 </head>
     
 <body>
@@ -18,7 +19,18 @@
             </ul>
         </nav>
     </header>
-    <h1>Bem-indo á pagina de contados</h1>
+    <h1>Bem-indo á pagina de contados</h1><br>
+
+    <ul id="catapinbas">
+        <li>suporte: (61)93254-9544</li>
+        <li>encomenda: (61)95443-9324</li>
+        <li>exmplo: (61)9944-8495</li>
+        <li>exemploe: (61)9342-5455</li>
+    </ul>
+
+    <footer>
+        <span>Marcelo intreteriment&</span>
+    </footer>
 </body>
 
 </html>
