--- a/segundo_exemplo/index.html
+++ b/segundo_exemplo/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
     <header>
@@ -17,5 +19,29 @@
         </nav>
     </header>
     <h1>Bem-indo á pagina inicial</h1>
+    <!-- target ="_blank" para abrir uma paginão e não fechar a sua-->
+    <!--
+    <a href="http://www.google.com.br" target="_blank">ir para o google</a>
+    -->
+
+    <h2>Aqui vai um subtitulo</h2>
+    <p>aqui tenho um paragrafo</p>
+    <!--digitar lorem para criar um texto paragrafos ou frases-->
+    <!-- aperte alt+shift+f para organizar-->
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus voluptas numquam unde qui laborum voluptate quas doloremque reiciendis, corrupti pariatur, quidem
+        tempore, autem aspernatur quibusdam ad quia ex consectetur deleniti!
+    </p>
+
+    <h4>Fotos</h4>
+
+    <!-- codego: aria-describedby="" para pessoas deficientes-->
+    <img src="download.png" alt="uma imagem sobre cursos" aria-describedby="uma imagem sobre cursos"><br><br>
+    <!-- iframe para videos-->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ej8RhiSv2-4?si=Jbtp-ducFiuy14y1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <footer>
+        <span>Marcelo intreteriment&</span>
+    </footer>
 </body>
 </html>
