--- a/segundo_exemplo/produtos.html
+++ b/segundo_exemplo/produtos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="Style/Style.css">
+    <link rel="stylesheet" href="Style/produtos.css">
 
 </head>
 
@@ -26,25 +26,26 @@
     <!--
     <a href="http://www.google.com.br" target="_blank">ir para o google</a>
     -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Quis iure voluptas magni rerum eaque, consequatur itaque
+        reprehenderit perspiciatis at molestias? Quasi accusantium
+        excepturi illo sunt aliquid quisquam nemo quas dolorum.</p>
+    <h1>Produtos a venda</h1>
+    <br>  
+        <img src="produto1.png" alt="nescau">
+        <p class="compra">R$49,99</p>
+        <button>comprar</button>
 
-    <h2>Aqui vai um subtitulo</h2>
-    <p>aqui tenho um paragrafo</p>
-    <!--digitar lorem para criar um texto paragrafos ou frases-->
-    <!-- aperte alt+shift+f para organizar-->
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatibus voluptas numquam unde qui laborum voluptate quas doloremque reiciendis, corrupti pariatur, quidem
-        tempore, autem aspernatur quibusdam ad quia ex consectetur deleniti!
-    </p>
+        <img src="produto2.png" alt="nescau">
+        <p class="compra">R$38,99</p>
+        <button>comprar</button>
 
-    <h4>Fotos</h4>
+        <img src="produto3.png" alt="nescau">
+        <p class="compra">R$79,99</p>
+        <button>comprar</button>
 
-    <!-- codego: aria-describedby="" para pessoas deficientes-->
-    <img src="download.png" alt="uma imagem sobre cursos" aria-describedby="uma imagem sobre cursos"><br><br>
-    <!-- iframe para videos-->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ej8RhiSv2-4?si=Jbtp-ducFiuy14y1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <footer>
-        <span></span>
+        <span>Marcelo intreteriment&</span>
     </footer>
 
 </body>
