atividade de criar comentarios e uma pagina

--- a/segundo_exemplo/contato.html
+++ b/segundo_exemplo/contato.html
@@ -24,8 +24,8 @@
     <ul id="catapinbas">
         <li>suporte: (61)93254-9544</li>
         <li>encomenda: (61)95443-9324</li>
-        <li>exmplo: (61)9944-8495</li>
-        <li>exemploe: (61)9342-5455</li>
+        <li>exemplo: (61)9944-8495</li>
+        <li>exemplo: (61)9342-5455</li>
     </ul>
 
     <footer>
