exercicio de criar um site usando bootstrap

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -42,7 +42,7 @@
             <h2>Nosos cursos populares</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <div cass="card md-4 shadow-sm">
+                    <div class="card md-4 shadow-sm">
                         <img src="#" alt="imagem do curso 1" class="card-img-top">
                         <div class="card-body">
                             <h3 class="card-title">Cursos de programação web</h3>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div cass="card md-4 shadow-sm">
+                    <div class="card md-4 shadow-sm">
                         <img src="#" alt="imagem do curso 2" class="card-img-top">
                         <div class="card-body">
                             <h3 class="card-title">Cursos de programação web</h3>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div cass="card md-4 shadow-sm">
+                    <div class="card md-4 shadow-sm">
                         <img src="#" alt="imagem do curso 3" class="card-img-top">
                         <div class="card-body">
                             <h3 class="card-title">Cursos de programação web</h3>
